# 21school

./: .gitignore
BSQ/: CMakeLists.txt  Makefile  main.c  map.txt  map2.txt  map3.txt  map_generator.pl
BSQ/include/: bsq.h
BSQ/src/: io_lib.c  main.c  map_lib.c  matrix_lib.c  num_lib.c  settings_lib.c  str_lib.c
c00/: main.c
c00/c00.xcodeproj/: project.pbxproj
c005/: CMakeLists.txt  main.c
c005/ex00/: ft_iterative_factorial.c
c005/ex01/: ft_recursive_factorial.c
c005/ex02/: ft_iterative_power.c
c005/ex03/: ft_recursive_power.c
c005/ex04/: ft_fibonacci.c
c005/ex05/: ft_sqrt.c
c005/ex06/: ft_is_prime.c
c005/ex07/: ft_find_next_prime.c
c005/ex08/: ft_ten_queens_puzzle.c
c01/: CMakeLists.txt  main.c
c01/ex00/: ft_ft.h  ft_ft_c.swp
c01/ex01/: ft_ultimate_ft.c  ft_ultimate_ft.h
c01/ex02/: ft_swap.h
c01/ex03/: ft_div_mod.c  ft_div_mod.h
c01/ex04/: ft_ultimate_div_mod.c  ft_ultimate_div_mod.h
c01/ex05/: ft_putstr.c  ft_putstr.h
c01/ex06/: ft_strlen.h
c01/ex07/: ft_rev_int_tab.c  ft_rev_int_tab.h
c01/ex08/: ft_sort_int_tab.c  ft_sort_int_tab.h
c02/: CMakeLists.txt  main.c
c02/ex00/: ft_strcpy.c  ft_strcpy.h
c02/ex01/: ft_strncpy.c  ft_strncpy.h
c02/ex02/: ft_str_is_alpha.c  ft_str_is_alpha.h
c02/ex03/: ft_str_is_numeric.c  ft_str_is_numeric.h
c02/ex04/: ft_str_is_lowercase.c  ft_str_is_lowercase.h
c02/ex05/: ft_str_is_uppercase.c  ft_str_is_uppercase.h
c02/ex06/: ft_str_is_printable.c  ft_str_is_printable.h
c02/ex07/: ft_strupcase.c  ft_strupcase.h
c02/ex08/: ft_strlowcase.c  ft_strlowcase.h
c02/ex09/: ft_strcapitalize.c  ft_strcapitalize.h
c02/ex10/: ft_strlcpy.c  ft_strlcpy.h
c02/ex11/: ft_putstr_non_printable.c  ft_putstr_non_printable.h
c02/ex12/: ft_print_memory.c  ft_print_memory.h
c04/: CMakeLists.txt  main.c
c04/ex00/: ft_strlen.c  ft_strlen.h
c04/ex01/: ft_putstr.c  ft_putstr.h
c04/ex02/: ft_putnbr.c  ft_putnbr.h
c04/ex03/: ft_atoi.c  ft_atoi.h
c04/ex04/: ft_putnbr_base.c  ft_putnbr_base.h
c04/ex05/: ft_atoi_base.c
c07/: CMakeLists.txt  a2.out  main.c
c07/ex00/: ft_strdup.c
c07/ex01/: ft_range.c
c07/ex02/: ft_ultimate_range.c
c07/ex03/: ft_strjoin.c
c08/: CMakeLists.txt  ft_boolean.h  main.c
c08/ex00/: ft.h
c08/ex01/: ft_boolean.h
c08/ex02/: ft_abs.h
c08/ex03/: ft_point.h
c08/ex04/: ft_strs_to_tab.c  ft_strs_to_tab.h
c08/ex05/: ft_show_tab.c  ft_show_tab.h
c09/: CMakeLists.txt
c09/ex00/: ft_putchar.c  ft_strcmp.c  ft_strlen.c  libft_creator.sh  main.c
c09/ex01/: Makefile
c10/: CMakeLists.txt
c10/ex00/: Makefile  ft_display_file  main.c  some.txt
c10/ex01/: Makefile  ft_cat
c10/ex02/: Makefile  ft_tail  some.txt
c11/: CMakeLists.txt  a.out  m.c  main.c
c11/ex00/: ft_foreach.c
c11/ex01/: ft_map.c
c11/ex02/: ft_any.c
c11/ex03/: ft_count_if.c
c11/ex04/: ft_is_sort.c
c11/ex05/: do-op.c
c12/: CMakeLists.txt  main.c
c12/ex00/: ft_create_elem.c
c12/ex01/: ft_list.h  ft_list_push_front.c
c12/ex02/: ft_list_size.c
c12/ex03/: ft_list.h  ft_list_last.c
c12/ex04/: ft_list.h  ft_list_push_back.c
c12/ex05/: ft_list.h  ft_list_push_strs.c
c12/ex06/: ft_list_clear.c
c12/ex07/: ft_list.h  ft_list_at.c
c12/ex08/: ft_list.h  ft_list_reverse.c
c12/ex09/: ft_list.h  ft_list_foreach.c
c12/ex10/: ft_list.h  ft_list_foreach_if.c
c12/ex11/: ft_list.h  ft_list_find.c
c12/ex12/: ft_list.h  ft_list_remove_if.c
c13/: CMakeLists.txt  main.c
c13/ex00/: btree_create_node.c  ft_btree.h
c13/ex01/: btree_apply_prefix.c  ft_btree.h
c13/ex02/: btree_apply_infix.c
c13/ex03/: btree_apply_suffix.c
libft/: CMakeLists.txt  Makefile  README.MD  ft_bzero.c  ft_memccpy.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  libft.h
rush00/: CMakeLists.txt  main.c
rush01/: CMakeLists.txt  main.c
rush02/: CMakeLists.txt  Makefile  numbers.dict  numbers_1.dict
rush02/includes/: rush.h
rush02/src/: convert_number.c  ft_strcmp.c  ft_strlen.c  main.c  parse_dictionary.c  parse_number.c
test/: CMakeLists.txt  main.c
с06/: CMakeLists.txt  main.c
с06/ex01/: a.out  (+1 more)
(+43 files in other folders)
