cmake_minimum_required(VERSION 3.17)
project(c02 C)

set(CMAKE_C_STANDARD 99)
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Werror")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

add_executable(c02 main.c
        ex00/ft_strcpy.c
        ex01/ft_strncpy.c
        ex02/ft_str_is_alpha.c
        ex03/ft_str_is_numeric.c
        ex04/ft_str_is_lowercase.c
        ex05/ft_str_is_uppercase.c
        ex06/ft_str_is_printable.c
        ex07/ft_strupcase.c
        ex08/ft_strlowcase.c
        ex09/ft_strcapitalize.c
        ex10/ft_strlcpy.c
        ex11/ft_putstr_non_printable.c
        ex12/ft_print_memory.c)